--- a/build.gradle
+++ b/build.gradle
@@ -22,8 +22,8 @@ apply plugin: 'net.minecraftforge.gradle.forge'
 //Only edit below this line, the above code adds and enables the nessasary things for Forge to be setup.
 
 version = "1.8.4"
-group= "iceandfire"
-archivesBaseName = "iceandfire"
+group= "iceandfire-nocoremod"
+archivesBaseName = "iceandfire-nocoremod"
 sourceCompatibility = targetCompatibility = "1.8"
 
 minecraft {
