--- a/build.gradle
+++ b/build.gradle
@@ -21,9 +21,9 @@ buildscript {
 apply plugin: 'net.minecraftforge.gradle.forge'
 //Only edit below this line, the above code adds and enables the nessasary things for Forge to be setup.
 
-version = "1.8.4"
-group= "iceandfire-nocoremod"
-archivesBaseName = "iceandfire-nocoremod"
+version = "1.8.5-nocoremod"
+group= "iceandfire"
+archivesBaseName = "iceandfire"
 sourceCompatibility = targetCompatibility = "1.8"
 
 minecraft {
